fixed margins of silver sponsors to make spacing look nicer.

--- a/src/assets/scss/landingpage/sponsors.scss
+++ b/src/assets/scss/landingpage/sponsors.scss
@@ -50,7 +50,7 @@
 	#silver-sponsor-container {
 		.sponsor {
 			width: 20%;
-			margin: 2%;
+			margin: 4%;
 		}
 	}
 	#bronze-sponsor-container {
